# ml_models_from_scratch

./: README.md  setup.cfg
algorithms/: knn.py  knn_notebook.ipynb  linear_regression.py
notebooks/: knn_notebook.ipynb  linear_regression_notebook.ipynb  logistic_regression_notebook.ipynb  naive_bayes.ipynb  perceptron_notebook.ipynb  svm_notebook.ipynb
src/ml_algorithms/: base_regression.py  linear_regression.py  logistic_regression.py  naive_bayes.py  perceptron.py  svm.py
