[metadata]
name = ml_algorithms
version = 0.0.1
author = Eric Schanet
author_email = eric.schanet@gmail.com
description = ML algorithms from scratch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eschanet/ml_models_from_scratch/
project_urls =
    Bug Tracker = https://github.com/eschanet/ml_models_from_scratch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
